# praktika

./: ball.cpp  ball.h  ball_main  ball_main.cpp  cone.cpp  cone.h  cone_main  cone_main.cpp  cylinder.cpp  cylinder.h  cylinder_main  cylinder_main.cpp  figures  figures.cpp  torus.cpp  torus.h  torus_main  torus_main.cpp
ballProject/: CMakeLists.txt
ballProject/src/: CMakeLists.txt  ball.cpp
ballProject/tests/: CMakeLists.txt  test_ball.cpp
coneProject/: CMakeLists.txt
coneProject/src/: CMakeLists.txt  cone.cpp
coneProject/tests/: CMakeLists.txt  test_cone.cpp
cylinderProject/: CMakeLists.txt
cylinderProject/src/: CMakeLists.txt
cylinderProject/tests/: CMakeLists.txt  test_cylinder.cpp
torusProject/: CMakeLists.txt
torusProject/src/: CMakeLists.txt  torus.h
torusProject/tests/: CMakeLists.txt  test_torus.cpp
